--- a/loginapp/package.json
+++ b/loginapp/package.json
@@ -45,6 +45,7 @@
     "jsdom": "~22.1.0",
     "nx": "18.0.4",
     "prettier": "^2.6.2",
+    "prisma": "^5.10.1",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.3.2",
@@ -56,7 +57,8 @@
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
-    "@nestjs/typeorm": "^10.0.2",
+    "@nestjs/swagger": "^7.3.0",
+    "@prisma/client": "^5.10.1",
     "axios": "^1.6.0",
     "pg": "^8.11.3",
     "react": "^18.2.0",
@@ -64,7 +66,7 @@
     "react-router-dom": "6.11.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
-    "tslib": "^2.3.0",
-    "typeorm": "^0.3.20"
+    "swagger-ui-express": "^5.0.0",
+    "tslib": "^2.3.0"
   }
 }
