--- a/loginapp/package.json
+++ b/loginapp/package.json
@@ -57,6 +57,7 @@
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
+    "@nestjs/swagger": "^7.3.0",
     "@prisma/client": "^5.10.1",
     "axios": "^1.6.0",
     "pg": "^8.11.3",
