--- a/loginapp/package.json
+++ b/loginapp/package.json
@@ -60,6 +60,7 @@
     "@nestjs/swagger": "^7.3.0",
     "@prisma/client": "^5.10.1",
     "axios": "^1.6.0",
+    "class-validator": "^0.14.1",
     "pg": "^8.11.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
